--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
   <header class="page-header">
     <div class="container">
-      Контакты в шапке
+      +7(925)122-55-16
     </div>
   </header>
 
   <section class="hero-image">
     <div class="container">
-    <h1 class="heading">Неопознанный Енот</h1>
-    <p>Junior верстальщик</p>
+    <h1 class="heading">Руслан Гнатовский</h1>
+    <p>Веб-разработчик</p>
     </div>
   </section>
 
