--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic"
+    rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>Портфолио Junior верстальщика</title>
 </head>
@@ -11,43 +13,55 @@
 <body>
   <header class="page-header">
     <div class="container">
-      +7(925)122-55-16
+      <a href="mailto:rgnatovsky@gmail.com" class="header-email">rgnatovsky@gmail.com</a>
+      <a href="tel:+79251225516" class="header-phone">+7(925)122-55-16</a>
     </div>
   </header>
 
   <section class="hero-image">
     <div class="container">
-    <h1 class="heading">Руслан Гнатовский</h1>
-    <p>Веб-разработчик</p>
+      <h1 class="heading">Руслан Гнатовский</h1>
+      <p>Full-stack разработчик</p>
     </div>
   </section>
 
   <section class="intro">
     <div class="container">
-    <h2 class="subheading">Давайте познакомимся</h2>
-    <h3>Пара слов о себе</h3>
-    <p>Текст с парой слов о себе.</p>
-    <h3>Чем могу быть полезен</h3>
-    <p>Текст о том, чем могу быть полезен.</p>
+      <h2 class="subheading">Давайте познакомимся</h2>
+      <figure class="user-image">
+        <img src="files/user.jpg" width="400" height="500" alt="Моя фотография">
+      </figure>
+      <h3>Пара слов о себе</h3>
+      <p>Свой первый "Hello, World!" написал в начале 2022 года. Каждый день узнаю что-то новое в программировании и
+        претворяю это в жизнь. Стремлюсь писать чистый и понятный код. Люблю структурировать, генерировать креатив, решать сложные задачи.</p>
+      <h3>Чем могу быть полезен</h3>
+      <p>Семантическая верстка, программирование и разработка сайтов с нуля, создание архитектуры приложения.</p>
+      <h3>Мой стэк технологий</h3>
+        <p>
+          HTML, CSS, JavaScript. Фреймворки: react, vue. Серверная часть: node.js, python (django).
+        </p>
+
     </div>
   </section>
 
   <section class="portfolio">
     <div class="container">
-    <h2 class="subheading">Мои работы</h2>
+      <h2 class="subheading">Мои работы</h2>
+      <figure class="project-image">
+        <img src="files/project.jpg" width="928" height="536" alt="Cайт магазина товаров для дома">
+      </figure>
+      <h3>Магазин товаров для дома</h3>
+      <p>Мой первый сайт.</p>
+      <a class="button" href="source/project-gloevk/index.html">Открыть страницу</a>
 
-    <h3>Магазин товаров для дома</h3>
-    <p>Мой первый сайт.</p>
-
-    <h3>Блог начинающего верстальщика</h3>
-    <p>Статический блог про обучение HTML и CSS.</p>
-  </div>
+    </div>
   </section>
 
   <footer class="page-footer">
     <div class="container">
-    Контакты в подвале
-  </div>
+      <a href="mailto:rgnatovsky@gmail.com" class="footer-email">rgnatovsky@gmail.com</a>
+      <a href="tel:+79251225516" class="footer-phone">+7(925)122-55-16</a>
+    </div>
   </footer>
 </body>
 
